# api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README_en.md  Secrets.toml.example  docker-compose.yml  log.txt
.sqlx/: query-1c6f060a5761824fac8e53641b0677b067fd1069a9b133178bcc6e56f23f984f.json  query-1eaaeab56d12b6e6118cd2468080cb708f9bdeb6f5f96845442a8f3774f1d1d2.json  query-280dc12584861464feda5e390ef30fc75c3a95347d036ab4b8c15e46500d92a1.json  query-384ca8de199d27c2c90fe0284f665da2ec804ff05b2f1a6bb5a3ab675f778f2f.json  query-385b43eb9a5e393b16d860264e51ab6f6d70312959facd1db167a296bfb7288e.json  query-4560c237741ce9d4166aecd669770b3360a3ac71e649b293efb88d92c3254068.json  query-51cd9176ca4f992b682bed03ed87d5ccca75e561ba7dd39891ce6cac8cba51b1.json  query-648b1123720eb3189e619a8b62cebd554dc21da9bffa68555540ce4b60c956b7.json  query-70fb672b5293f0e94e7f5459a4fb124d51f87d7bdbce120ce1f5f3de0c05dfd5.json  query-7a6788e4877527020ea4f0f520d6188d6927988b29a232e4e753cef86b05b52a.json  query-9cf8e3888c1e404c9b145a54a15263809ad3b4dbeaf38f96592707a3f9a41b59.json  query-9d864712d27b929ccc6a2544699e638d05bb341d2f3bbf702e3bbdd10941533f.json  query-a46e809f0060d834775b0d2ed0929dde74c42ed0482e1cc618c163b5d0895767.json  query-b03d2ef8edd090a279cabc117986bc5b8d1f0db7079ac6ec066095be0d393bc1.json  query-c614579f994a4b5a1b4adddf220407ca626f549c54e86affe99d178e0fcf73e2.json  query-da2bd7eb3ef4cf72780110e11aaa3624218512f114c3885e9585a178f78c0ee5.json  query-ee18dcb63a0ee32ebe7873af4c6bcfe42a1fa39d056532036ac777c2637bb9a9.json  query-fa9374d1d2e822468cc492c063c9638e2f11d3b1d5feadb8e0dbddfe32002788.json
doc/: websockets.md  websockets_en.md
migrations/: 0001_account.sql  0001_create_account.sql  0001_users.sql  0002_create_follow.sql  0002_email_confirm.sql  0002_follow.sql  0002_following.sql  0002_users.sql  0003_create_post.sql  0003_post.sql  0004_create_post_author.sql
src/: main.rs  schema.rs
src/extractors/: auth_extractor.rs  mod.rs
src/middleware/: auth_middleware.rs  logger.rs  logger_middleware.rs  mod.rs
src/middlewares/: logger_middleware.rs
src/models/: account.rs  mod.rs  post.rs
src/queries/: insert_account.sql  insert_post.sql  select_count_of_accounts_with_email.sql  select_count_of_accounts_with_username.sql  select_posts.sql
src/routes/: a2f_login_route.rs  email_confirm_route.rs  follow_user_route.rs  get_posts.rs  login_route.rs  mod.rs  ok_route.rs  publish_post.rs  register_route.rs  sse.rs  test.rs  ws.rs  ws_route.rs
src/structs/: account.rs  login_user.rs  mod.rs  pagination.rs  post.rs  register_user.rs  user.rs
src/utils/: app_error.rs  authentification.rs  delete_not_activated_expired_accounts.rs  jwt.rs  mod.rs  post.rs  register.rs  token.rs  (+1 more)
