[package]
name = "apynext"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.2"
axum = "0.6.20"
base64 = "0.21.2"
chrono = "0.4.26"
email_address = "0.2.4"
hyper = "0.14.27"
jsonwebtoken = "8.3.0"
lettre = "0.10.4"
rand = "0.8.5"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
sha2 = "0.10.7"
shuttle-axum = "0.24.0"
shuttle-runtime = "0.24.0"
shuttle-secrets = "0.24.0"
shuttle-shared-db = { version = "0.24.0", features = ["postgres-rustls"] }
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "time",
] }
time = { version = "0.3.25", features = ["serde"] }
tokio = { version = "1.32.0", features = ["macros"] }
