[package]
name = "apynext"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
base64 = "0.21.2"
chrono = "0.4.26"
email_address = "0.2.4"
futures = "0.3.28"
futures-util = "0.3.28"
hyper = "0.14.27"
lettre = "0.10.4"
libaes = "0.6.5"
rand = "0.8.5"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
sha2 = "0.10.7"
shuttle-axum = "0.27.0"
shuttle-runtime = "0.27.0"
shuttle-secrets = "0.27.0"
shuttle-shared-db = { version = "0.27.0", features = ["postgres-rustls"] }
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "time",
] }
time = { version = "0.3.25", features = ["serde"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.3", features = ["cors"] }
urlencoding = "2.1.3"
