[package]
name = "apynext"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
axum = { version = "0.6.20", features = ["tokio", "headers", "ws"] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
axum-macros = "0.3.8"
base64 = "0.21.2"
chrono = "0.4.26"
email_address = "0.2.4"
futures = "0.3.28"
futures-channel = "0.3.28"
futures-util = "0.3.28"
hyper = "0.14.27"
lettre = "0.10.4"
libaes = "0.6.5"
openssl = { version = "0.10.63", features = ["vendored"] }
rand = "0.8.5"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
sha2 = "0.10.7"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "time",
] }
time = { version = "0.3.25", features = ["serde"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.4.3", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
